# InverseLaplaceAI

./: README.md  example.py  meson.build  model.pth  pyproject.toml
src/invlap/: __init__.py  fake_data.py  model.py  qstatpy_extention.py  train.py
