[project]
name="invlap"
version="1.0"
authors = [
    { name="Andreas Hackl", email="andreas.hackl@proton.me"}
]

description="This is a fun side project to explore whether a dense neural network can solve the inverse Laplace problem for a noisy correlation function like that used in Lattice QCD."
readme="README.md"
dependencies = ["numpy", "matplotlib", "torch", "torchvision"]
license={ file = "LICENSE"}
